feat(notification): refactor notification event handling and enhance payload structure